# bfinterpreters

./: .gitignore  CMakeLists.txt  CMakeSettings.json
bfinterpreter/: CMakeLists.txt
bfinterpreter/src/: bfinteropt1.cpp  bfinteropt1_scan.cpp  bfinteropt2.cpp  bfinteropt2_reduced.cpp  bfinteropt3.cpp  bfinteropt4.cpp  bfinteropt4_fast.cpp  bfinterpreter.cpp  shared.h  test.asm  testasm.cpp
tests/: bitwidth.bf  shorthello.bf
