include_directories(.)

add_executable(
    bfinterpreter 
        "src/bfinterpreter.cpp"
)

add_executable(
    bfinteropt1 
        "src/bfinteropt1.cpp"
)

add_executable(
    bfinteropt1_scan 
        "src/bfinteropt1_scan.cpp"
)

add_executable(
    bfinteropt2
        "src/bfinteropt2.cpp"
)

add_executable(
    bfinteropt2_reduced
        "src/bfinteropt2_reduced.cpp"
)